[package]
name = "gb2260"
version = "0.1.2"
authors = ["messense <messense@icloud.com>"]
description = "The Rust implementation for looking up Chinese administrative divisions"
keywords = ["chinese", "divisions"]
license = "MIT"
readme = "README.md"
exclude = ["data/**"]
repository = "https://github.com/cn/GB2260.rs"

[dependencies]
phf = "0.8"

[badges]
travis-ci = { repository = "cn/GB2260.rs" }
